Add mhairi changes to cc workshop copy

--- a/src/site/confidence-collective-workshop.njk
+++ b/src/site/confidence-collective-workshop.njk
@@ -73,17 +73,25 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
     <!-- get quiet section -->
     <section class="simple-section bg-gray">
         <h2 class="sect-title">
-            Begin at the end, start before you're ready and allow yourself the freedom to fail.
+            Think of confidence less as something you have and more as something you do.
         </h2>
         <div class="simple-section-text">
             <p class="normal-text">
-                No I’ve not lost the plot babes (well no more than usual). The above is your route to incredible self confidence.  
+                The last 12 months have affected us all in a number of ways, but there is nothing quite like having the rug pulled from under you to put a dent in your self-confidence.  
             </p>
             <p class="normal-text">
-                Low self confidence can impact us negatively in numerous ways.  One of the more insidious effects is how it dampens our creativity and puts a pin in our dreams.
+                No one is exempt from the ebb and flow of self-confidence, so in this session we develop the positive behaviours which will nurture the self-trust, self-assuredness and self-focus that you deserve. 
             </p>
+            <div class="confidence-list-container">
+                <ul class="normal-text confidence-list">
+                <li class="confidence-list-item">Do you question your self-worth and your abilities?</li>
+                <li class="confidence-list-item">Are you worried about being exposed as a Fraud?</li>
+                <li class="confidence-list-item">Do you notice your negative self-talk but don’t know how to change it?</li>
+                <li class="confidence-list-item">Are you stuck between needing to make changes but afraid of what that may look like?</li>
+            </ul>
+            </div>
             <p class="normal-text">
-                I’ve created this workshop as a wonderfully hopeful and incurably compassionate space for you to rediscover you.  Through practical tools and techniques you will learn the essentials to come home to your most confident self.
+                I’ve created this workshop as a wonderfully hopeful and incurably compassionate space for you to rediscover you. Through practical tools and techniques, you will learn the essentials to come home to your most confident self.
             </p>
         </div>
         <div class="about-cta-btn">
@@ -102,32 +110,40 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
 
     <!-- workshop includes section -->
     <section class="why-mhairi worksop-includes">
-        <div class="why-mhairi-content workshop-includes-content">
+        <div class="why-mhairi-content workshop-includes-content cc-workshop-includes">
             <div class="home-about-img">
                 <img src="../static/img/Mhairi_pics/mhairi_on_phone.jpg" alt="mhairi-life-coach-on-phone">
             </div>
             <div class="why-mhairi-title pl-md-0">
                 <h3 class="home-about-subtitle fw-b">
-                    In this workshop we dream big and start small 
+                    In this workshop we go big by starting small 
                 </h3>
             </div>
             <div class="home-about-text pl-md-0">
                 <ul class="workshop-includes-list normal-text">
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">We start with a short and useful breathing technique to ground us in.</span>
+                        <span class="workshop-includes-item-text">No shouty pep talks or fire walks needed here babes! With a light touch and hefty dose of humour we will get you where you want to be</span>
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">I’ll then lead you through 3 principles to restore the confidence you deserve and desire.</span>
+                        <span class="workshop-includes-item-text">We start with your intention, what you desire for yourself when it comes to self-confidence.</span>
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">You won’t have to speak babes or even turn your camera on if you do not wish (phew).  Importantly the interactive chat button will be enabled so collectively we can share fears and revelations and in doing so create a giving and supportive environment.</span>
+                        <span class="workshop-includes-item-text">I’ll then lead you through the absolute essentials to restore the confidence you deserve and crave.</span>
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">We will complete practical exercises to intuitively immerse ourselves into what confidence means to us and how to call that in.</span>
+                        <span class="workshop-includes-item-text">We will uncover your motivation to make changes, tap into your self-confidence at its root and equip you to navigate dips and triggers.</span>
+                    </li>
+                    <li class="workshop-includes-item">
+                        <i class="far fa-check-circle"></i>
+                        <span class="workshop-includes-item-text">No matter where your self confidence level currently sits, I will meet you where you are at and journey with you to a more confident, calm and unstoppable you.</span>
+                    </li>
+                    <li class="workshop-includes-item">
+                        <i class="far fa-check-circle"></i>
+                        <span class="workshop-includes-item-text">So get into your comfy bumfies, pour yourself a cup of something yummy and lets start as we mean to go on…together.</span>
                     </li>
                 </ul>
             </div>
