--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -42,7 +42,8 @@
   'pages/services',
   'pages/contact',
   'pages/testimonials',
-  'pages/opening_workshop';
+  'pages/opening_workshop',
+  'pages/cc_workshop';
 
 // 7. Themes
 @import
