Add confidence replay

--- a/src/site/confidence-collective-workshop.njk
+++ b/src/site/confidence-collective-workshop.njk
@@ -54,7 +54,7 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
                     data-item-id="#WS1"
                     data-item-price="15"
                     data-item-url="/confidence-collective-workshop"
-                    data-item-description="Confidence Collective Workshop"
+                    data-item-description="Confidence Collective Workshop - Replay"
                     data-item-image=""
                     data-item-name="Confidence Collective Workshop">
                     Get your ticket
@@ -99,7 +99,7 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
                 data-item-id="#WS1"
                 data-item-price="15"
                 data-item-url="/confidence-collective-workshop"
-                data-item-description="Confidence Collective Workshop"
+                data-item-description="Confidence Collective Workshop - Replay"
                 data-item-image=""
                 data-item-name="Confidence Collective Workshop">
                 Get your ticket
@@ -152,7 +152,7 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
                     data-item-id="#WS1"
                     data-item-price="15"
                     data-item-url="/confidence-collective-workshop"
-                    data-item-description="Confidence Collective Workshop"
+                    data-item-description="Confidence Collective Workshop - Replay"
                     data-item-image=""
                     data-item-name="Confidence Collective Workshop">
                     Get your ticket
@@ -171,7 +171,7 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
             <div class="timer-container">
                 <div class="timer-digit-container">
                     <div class="timer-digit rob-font">
-                        <p id="timer-days" class="timer-text ccw">
+                        <p id="timer-days" class="timer-text ccw replay-avail">
 
                         </p>
                     </div>
@@ -216,7 +216,7 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
                 data-item-id="#WS1"
                 data-item-price="15"
                 data-item-url="/confidence-collective-workshop"
-                data-item-description="Confidence Collective Workshop"
+                data-item-description="Confidence Collective Workshop - Replay"
                 data-item-image=""
                 data-item-name="Confidence Collective Workshop">
                 Get your ticket
@@ -290,7 +290,7 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
                 data-item-id="#WS1"
                 data-item-price="15"
                 data-item-url="/confidence-collective-workshop"
-                data-item-description="Confidence Collective Workshop"
+                data-item-description="Confidence Collective Workshop - Replay"
                 data-item-image=""
                 data-item-name="Confidence Collective Workshop">
                 JOIN ME FOR THE CONFIDENCE COLLECTIVE WORKSHOP 
