--- a/src/site/opening-workshop.njk
+++ b/src/site/opening-workshop.njk
@@ -160,7 +160,7 @@ metaDescription: 'A 1hr lecture style workshop followed by a 30 min restorative 
             <div class="timer-container">
                 <div class="timer-digit-container">
                     <div class="timer-digit rob-font">
-                        <p id="timer-days" class="timer-text ow">
+                        <p id="timer-days" class="timer-text ow replay-avail">
 
                         </p>
                     </div>
