Add replay to product name

--- a/src/site/confidence-collective-workshop.njk
+++ b/src/site/confidence-collective-workshop.njk
@@ -56,7 +56,7 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
                     data-item-url="/confidence-collective-workshop"
                     data-item-description="Confidence Collective Workshop - Replay"
                     data-item-image=""
-                    data-item-name="Confidence Collective Workshop">
+                    data-item-name="Confidence Collective Workshop - Replay">
                     Get your ticket
                 </button>
             </div>
@@ -101,7 +101,7 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
                 data-item-url="/confidence-collective-workshop"
                 data-item-description="Confidence Collective Workshop - Replay"
                 data-item-image=""
-                data-item-name="Confidence Collective Workshop">
+                data-item-name="Confidence Collective Workshop - Replay">
                 Get your ticket
             </button>
         </div>
@@ -154,7 +154,7 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
                     data-item-url="/confidence-collective-workshop"
                     data-item-description="Confidence Collective Workshop - Replay"
                     data-item-image=""
-                    data-item-name="Confidence Collective Workshop">
+                    data-item-name="Confidence Collective Workshop - Replay">
                     Get your ticket
                 </button>
             </div>
@@ -218,7 +218,7 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
                 data-item-url="/confidence-collective-workshop"
                 data-item-description="Confidence Collective Workshop - Replay"
                 data-item-image=""
-                data-item-name="Confidence Collective Workshop">
+                data-item-name="Confidence Collective Workshop - Replay">
                 Get your ticket
             </button>
         </div>
@@ -292,7 +292,7 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
                 data-item-url="/confidence-collective-workshop"
                 data-item-description="Confidence Collective Workshop - Replay"
                 data-item-image=""
-                data-item-name="Confidence Collective Workshop">
+                data-item-name="Confidence Collective Workshop - Replay">
                 JOIN ME FOR THE CONFIDENCE COLLECTIVE WORKSHOP 
             </button>
         </div>
