--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -43,7 +43,8 @@
   'pages/contact',
   'pages/testimonials',
   'pages/opening_workshop',
-  'pages/cc_workshop';
+  'pages/cc_workshop',
+  'pages/being_enough';
 
 // 7. Themes
 @import
